@@ -1,0 +1,59 @@
+#
+# SNMP forwarder: Manager part configuration
+#
+
+config-version: 2
+program-name: snmpfwd-client
+
+peers-group {
+  snmp-engine-id: 0x0102030405070809
+
+  snmp-transport-domain: 1.3.6.1.6.1.1.1
+  snmp-bind-address: 0.0.0.0:0
+
+  snmp-peer-timeout: 1
+  snmp-peer-retries: 0
+
+  snmp-community-name: public
+  snmp-security-name: public
+  snmp-security-model: 1
+  snmp-security-level: 1
+
+  snmp-peer-address: 104.236.166.95:161
+  snmp-peer-id: snmplabs-v1
+}
+
+trunking-group {
+  trunk-bind-address: 127.0.0.1:30301
+  trunk-connection-mode: server
+
+  trunk-id: <discover>
+}
+
+original-snmp-peer-info-group {
+  orig-snmp-bind-address-pattern: .*
+  orig-snmp-context-name-pattern: .*
+
+  orig-snmp-pdu-type-pattern: .*
+  orig-snmp-oid-prefix-pattern: .*
+
+  orig-snmp-engine-id-pattern: .*
+  orig-snmp-context-engine-id-pattern: .*
+
+  orig-snmp-transport-domain-pattern: .*
+  orig-snmp-peer-address-pattern: .*
+
+  orig-snmp-security-level-pattern: .*
+
+  orig-snmp-security-name-pattern: .*
+  orig-snmp-security-model-pattern: .*
+
+  orig-snmp-peer-id: manager-1
+}
+
+routing-map {
+  matching-trunk-id-list: trunk-1
+  matching-orig-snmp-peer-id-list: manager-1
+
+  using-snmp-peer-id-list: snmplabs-v1
+}
