@@ -1,0 +1,6 @@
+# block sysDescr.0
+^1\.3\.6\.1\.2\.1\.1\.1\.0$ block
+# allow system branch
+^1\.3\.6\.1\.2\.1\.1.*$ pass
+# block everything else
+.* block
