@@ -1,0 +1,70 @@
+#
+# SNMP forwarder: Agent part configuration
+#
+
+config-version: 2
+program-name: snmpfwd-server
+
+snmp-credentials-group {
+  snmp-transport-domain: 1.3.6.1.6.1.1.100
+  snmp-bind-address: 127.0.0.1:1161
+
+  snmp-engine-id: 0x0102030405070809
+
+  snmp-community-name: public
+  snmp-security-name: public
+  snmp-security-model: 1
+  snmp-security-level: 1
+
+  snmp-credentials-id: snmp-credentials
+}
+
+context-group {
+  snmp-context-engine-id-pattern: .*
+  snmp-context-name-pattern: .*
+
+  snmp-context-id: any-context
+}
+
+content-group {
+  snmp-pdu-type-pattern: .*
+  snmp-pdu-oid-prefix-pattern-list: 1\.3\.6\..*
+
+  snmp-content-id: any-content
+}
+
+peers-group {
+  snmp-transport-domain: 1.3.6.1.6.1.1.100
+  snmp-bind-address-pattern-list: .*
+  snmp-peer-address-pattern-list: .*
+
+  snmp-peer-id: 100
+}
+
+plugin-modules-path-list: ./plugins
+
+plugin-group {
+  plugin-module: oidfilter
+  plugin-options: config=conf/command-forwarding-filtering/plugins/oidfilter.conf
+
+  plugin-id: permit-system-branch
+}
+
+trunking-group {
+  trunk-bind-address: 127.0.0.1
+  trunk-peer-address: 127.0.0.1:30301
+  trunk-connection-mode: client
+
+  trunk-id: trunk-1
+}
+
+routing-map {
+  matching-snmp-context-id-list: any-context
+  matching-snmp-content-id-list: any-content
+
+  matching-snmp-credentials-id-list: snmp-credentials
+  matching-snmp-peer-id-list: 100
+
+  using-plugin-id-list: permit-system-branch
+  using-trunk-id-list: trunk-1
+}
